# docs/swagger.yaml
@@ -17,6 +17,19 @@ definitions:
       success:
         type: boolean
     type: object
+  models.ResponseUser:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      id:
+        type: integer
+      updatedAt:
+        type: string
+      userName:
+        type: string
+    type: object
   models.User:
     properties:
       createdAt:
@@ -64,7 +77,7 @@ paths:
             - properties:
                 data:
                   items:
-                    $ref: '#/definitions/models.User'
+                    $ref: '#/definitions/models.ResponseUser'
                   type: array
               type: object
         "400":
